hphp/test/slow/traits/diamond_use/diamond_use5.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T, T4) in %s/diamond_use5.php on line 26
